--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ColSeasons</string>
+    <string name="app_name">ColSeasons 1.2 Beta</string>
     <string-array name="days_28">
         <item>1</item>
         <item>2</item>
