--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,6 +146,7 @@
     </string-array>
 
     <string-array name="años">
+        <item>2019</item>
         <item>2018</item>
         <item>2017</item>
         <item>2016</item>
