--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,6 +146,30 @@
     </string-array>
 
     <string-array name="años">
+        <item>2043</item>
+        <item>2042</item>
+        <item>2041</item>
+        <item>2040</item>
+        <item>2039</item>
+        <item>2038</item>
+        <item>2037</item>
+        <item>2036</item>
+        <item>2035</item>
+        <item>2034</item>
+        <item>2033</item>
+        <item>2032</item>
+        <item>2031</item>
+        <item>2030</item>
+        <item>2029</item>
+        <item>2028</item>
+        <item>2027</item>
+        <item>2026</item>
+        <item>2025</item>
+        <item>2024</item>
+        <item>2023</item>
+        <item>2022</item>
+        <item>2021</item>
+        <item>2020</item>
         <item>2019</item>
         <item>2018</item>
         <item>2017</item>
